syntax = "proto3";
package botany.incentive;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "incentive/incentive.proto";

option go_package = "github.com/lcnem/jpyx/x/incentive/types";

// GenesisState defines the incentive module's genesis state.
message GenesisState {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
  repeated GenesisAccumulationTime cdp_accumulation_times = 2 [
    (gogoproto.moretags) = "yaml:\"cdp_accumulation_times\"",
    (gogoproto.nullable) = false
  ];
  repeated CdpMintingClaim cdp_minting_claims = 3 [
    (gogoproto.moretags) = "yaml:\"cdp_minting_claims\"",
    (gogoproto.nullable) = false
  ];
  GenesisDenoms denoms = 4 [(gogoproto.moretags) = "yaml:\"denoms\""];
  // this line is used by starport scaffolding # genesis/proto/state
}

message GenesisAccumulationTime {
  string collateral_type = 1 [(gogoproto.moretags) = "yaml:\"collateral_type\""];
  google.protobuf.Timestamp previous_accumulation_time = 2 [
    (gogoproto.moretags) = "yaml:\"previous_accumulation_time\"",
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

message GenesisDenoms {
  string principal_denom = 1 [(gogoproto.moretags) = "yaml:\"principal_denom\""];
  string cdp_minting_reward_denom = 2 [(gogoproto.moretags) = "yaml:\"principal_denom\""];
}
